# mercury-detector

./: .gitignore  .travis.yml  README.md
control/: .coveragerc  .gitattributes  MANIFEST.in  setup.cfg  setup.py  tox.ini
control/src/mercury/: _version.py
control/src/mercury/asic/: device.py  registers.py
control/src/mercury/asic_emulator/: adapter.py  client.py  emulator.py  register_model.py  server.py  shell.py
control/src/mercury/carrier/: Backplane.py  Carrier.py  adapter.py  asic.py
control/src/mercury/detector/: adapter.py  context.py  detector.py  proxy.py
control/src/mercury/loki_carrier/: adapter.py  carrier.py  hexitec_mhz_asic.py
control/src/mercury/tempmon/: adapter.py  tempmon.py
control/test/asic_emulator/: test_register_model.py
control/test/carrier/clk_config/: Si5344-RevD-merc0000-FastTDC-Registers-210M.txt  Si5344-RevD-merc0000-FastTDC-Registers-215M.txt  Si5344-RevD-merc0000-FastTDC-Registers-220M.txt  Si5344-RevD-merc0000-FastTDC-Registers-225M.txt  Si5344-RevD-merc0000-Registers.txt  Si5344-RevD-merc0000-Registers2.txt
control/test/config/: test_emulator.cfg  test_proxy.cfg
control/test/loki/: Si5344-RevD-200MHz_4_freerun-Registers.txt
control/test/sequences/: _10_test_pulse_tests.py  _7_diamond202212_tests.py  _8_fastdata_support.py  _9_gpib_support.py  _dssg_experimental.py  aa_diamond202208.py  asic_spi.py  asic_spi_legacy.py  diamond202212_support.py  dssg_tests.py  loki_test_sequences.py  mercury_initial_testing.py  pcb_tests.py  serialiser_tests.py  test.py  utility.py  vcal_noise_test.py
control/test/static/: index.html  sequencer.html
control/test/static/css/: carrier.css  command-sequencer.css
control/test/static/js/: carrier.js  command_sequencer.js  global-nav.js  odin_control.js  odin_server.js
data/: CMakeLists.txt
data/cmake/: FindOdinData.cmake
data/common/include/: MercuryDefinitions.h
data/config/: CMakeLists.txt  fp_log4cxx.xml  fr_log4cxx.xml
data/frameProcessor/: CMakeLists.txt
data/frameProcessor/include/: MercuryAdditionPlugin.h  MercuryCalibrationPlugin.h  MercuryDiscriminationPlugin.h  MercuryHistogramPlugin.h  MercuryNextFramePlugin.h  MercuryProcessorPlugin.h  MercuryReorderPlugin.h  MercuryTemplatePlugin.h  MercuryThresholdPlugin.h
data/frameProcessor/src/: CMakeLists.txt  MercuryAdditionPlugin.cpp  MercuryCalibrationPlugin.cpp  MercuryDiscriminationPlugin.cpp  MercuryHistogramPlugin.cpp  MercuryNextFramePlugin.cpp  MercuryProcessorPlugin.cpp  MercuryReorderPlugin.cpp  MercuryTemplatePlugin.cpp  MercuryThresholdPlugin.cpp
data/frameProcessor/test/: CMakeLists.txt
data/frameReceiver/: CMakeLists.txt
data/frameReceiver/include/: MercuryFrameDecoder.h
data/frameReceiver/src/: CMakeLists.txt  MercuryFrameDecoder - Copy.cpp  MercuryFrameDecoder.cpp  MercuryFrameDecoderLib.cpp
data/frameSimulator/: CMakeLists.txt
data/frameSimulator/include/: FrameSimulatorOptionsMercury.h  MercuryFrame.h  MercuryFrameSimulatorPlugin.h
data/frameSimulator/src/: CMakeLists.txt  MercuryFrameSimulatorPlugin.cpp
data/test/: CMakeLists.txt
data/test/integrationTest/: CMakeLists.txt  dataset_check.py
data/test/integrationTest/config/: mercury-average.json  mercury-fp-average.json  mercury-fp.json  mercury-fr.json  mercury.json  test-average.json
data/test/integrationTest/config/patterns/: CSD_average.json  CSD_gradient.json  CSD_overlap.json
data/test/intergrationTest/: CMakeLists.txt  dataset_check.py
data/test/intergrationTest/config/: mercury-average.json  mercury-fp-average.json  mercury-fp.json  mercury.json  test.json
data/test/intergrationTest/config/patterns/: CSD_max.json
